--- a/coltermay.com/css/style.css
+++ b/coltermay.com/css/style.css
@@ -5,7 +5,7 @@
   font-size: 2.2em;
   font-weight: 400;
   letter-spacing: 3px;
-  padding: 0px 0 30px 98px; }
+  padding: 0px 0 30px 76px; }
   .heading__secondary:before {
     content: attr(data-text);
     position: relative;
@@ -22,7 +22,7 @@
   font-size: 2.2em;
   font-weight: 400;
   letter-spacing: 3px;
-  padding: 0px 0 30px 98px;
+  padding: 0px 0 30px 76px;
   padding-left: 38px; }
   .js-heading__secondary:before {
     content: attr(data-text);
@@ -58,7 +58,6 @@
   .slide__content {
     position: absolute;
     color: #fff;
-    background-color: rgba(14, 4, 4, 0.699);
     padding: 30px 30px 30px 60px;
     bottom: 70px;
     left: -600px;
@@ -79,15 +78,15 @@
     transform: translateX(600px);
     transition: all 0.7s ease-in-out 0.9s; }
   .slide:first-child {
-    background: url(../img/EasterSunrise-min.jpg) no-repeat center center/cover; }
+    background: url(../img/chita-min.jpg) no-repeat center center/cover; }
   .slide:nth-child(2) {
-    background: url(../img/EasterSunset-min.JPEG) no-repeat center center/cover; }
+    background: url(../img/jaguar-min.jpeg) no-repeat center center/cover; }
   .slide:nth-child(3) {
-    background: url(../img/TheTowers-min.jpg) no-repeat center center/cover; }
+    background: url(../img/elephant-min.jpeg) no-repeat center center/cover; }
   .slide:nth-child(4) {
-    background: url(../img/ChasingDusk-min.jpg) no-repeat center center/cover; }
+    background: url(../img/leon-min.jpg) no-repeat center center/cover; }
   .slide:nth-child(5) {
-    background: url(../img/img5.jpg) no-repeat center center/cover; }
+    background: url(../img/mono-min.jpg) no-repeat center center/cover; }
   .slide__buttons button {
     border: 2px solid #ffd880;
     background-color: transparent;
@@ -161,120 +160,103 @@ body {
 .white {
   color: #f6f5ee; }
 
-.main__nav {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 27px;
+.navigation {
+  position: fixed;
   display: flex;
-  background-color: rgba(14, 4, 4, 0.788);
-  box-shadow: 0px 10px 40px -10px rgba(0, 0, 0, 0.75);
-  overflow: hidden;
-  justify-content: space-between;
-  align-items: center; }
-  .main__nav .logo {
-    position: relative;
-    font-size: 1.4em;
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 1.3px;
-    font-weight: 700;
-    margin-left: 40px;
-    color: #ffd880; }
-  .main__nav .logo__mobile {
-    display: none;
-    position: relative;
-    font-size: 1.7em;
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 1.3px;
-    font-weight: 700;
-    margin-left: 40px;
-    color: #ffd880; }
+  align-items: center;
+  padding: 30px 0 30px 0;
+  width: 100%;
+  z-index: 99; }
 
-.nav {
+.logo {
   position: relative;
-  display: flex;
-  font-size: 14px; }
-  .nav__item {
-    list-style: none; }
-  .nav__link {
-    position: relative;
-    display: inline-block;
-    margin-right: 40px;
-    text-decoration: none;
-    font-size: 1em;
-    color: #ffd880;
-    font-weight: 400;
-    text-transform: uppercase;
-    transition: all .4s; }
-    .nav__link:before {
-      content: '';
-      width: 0;
-      height: 2px;
-      margin-top: 30px;
-      background-color: #ffd880;
-      position: absolute;
-      top: 100%;
-      left: 0; }
-    .nav__link:hover {
-      color: #a6a6a6; }
-
-.nav__item:hover .nav__link:before {
-  width: 100%;
-  transition: .5s; }
+  left: 3rem;
+  font-size: 1.9em;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 1.3px;
+  font-weight: 700;
+  color: #ffd880; }
 
 .active {
   color: #fff; }
 
-.social__icons a {
-  color: #ffd880;
-  font-size: 1.2em; }
-  .social__icons a:last-child {
-    margin-right: 40px;
-    margin-left: 8px; }
-  .social__icons a:hover {
+.toggle-btn {
+  cursor: pointer;
+  position: relative;
+  left: 90%;
+  width: 40px;
+  height: 12px;
+  z-index: 99; }
+
+span.one {
+  position: absolute;
+  width: 40px;
+  height: 2px;
+  background: #fff; }
+
+span.two {
+  position: absolute;
+  width: 40px;
+  height: 2px;
+  background: #fff;
+  margin-top: 12px; }
+
+.menu {
+  position: fixed;
+  background: linear-gradient(black, rgba(0, 0, 0, 0.8));
+  height: 100vh;
+  width: 100%;
+  top: -100%;
+  z-index: 1; }
+  .menu span {
     color: #fff; }
+
+.data {
+  padding: 8em 0 0 2em;
+  text-align: center; }
+
+.nav__list {
+  list-style: none; }
+
+.nav__item {
+  font-size: 3em;
+  letter-spacing: 1.5px;
+  text-transform: uppercase; }
+
+.nav__link {
+  text-decoration: none;
+  color: #424242; }
+  .nav__link:hover {
+    color: #757575; }
+  .nav__link::before {
+    content: '[';
+    left: -5px; }
+  .nav__link::after {
+    content: ']';
+    right: -5px; }
+  .nav__link:before, .nav__link:after {
+    position: relative;
+    opacity: 0;
+    color: #ffd880;
+    top: -1px;
+    transition: all .5s; }
+  .nav__link:hover:before, .nav__link:hover:after {
+    opacity: 0.7; }
+  .nav__link:hover:before {
+    left: -20px; }
+  .nav__link:hover:after {
+    right: -20px; }
 
 .sticky {
   position: fixed;
-  background: rgba(10, 2, 2, 0.924);
+  background: rgba(0, 0, 0, 0.924);
   animation-name: stick;
   animation-duration: .4s;
   animation-timing-function: ease;
   transition: background-color 1000ms ease-out;
   transition-delay: 125ms;
   z-index: 99; }
-
-.menu__btn {
-  position: absolute;
-  height: 4.2rem;
-  width: 4.2rem;
-  border-radius: 50%;
-  right: 15px;
-  top: 10px;
-  cursor: pointer;
-  display: none;
-  z-index: 2; }
-  .menu__btn .btn__line {
-    position: relative;
-    top: 37%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 2rem;
-    height: 1px;
-    margin: 0 0 6px 0;
-    background: #fff;
-    transition: ease-out .3s; }
-  .menu__btn.close {
-    transform: rotate(180deg); }
-    .menu__btn.close .btn__line:nth-child(1) {
-      transform: rotate(45deg) translate(-5px, 14px); }
-    .menu__btn.close .btn__line:nth-child(2) {
-      opacity: 0; }
-    .menu__btn.close .btn__line:nth-child(3) {
-      transform: rotate(-45deg) translate(-4px, -15px); }
 
 .section__about {
   background-color: #000000; }
@@ -283,7 +265,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 100px;
+  padding: 100px 0 100px 0;
   /* ABOUT IMG REVEALING ON SCROLL */ }
   .about__text {
     width: 50%;
@@ -305,15 +287,15 @@ body {
       font-weight: 400; }
   .about__photo {
     position: relative;
-    top: -15px;
+    top: 4px;
     left: 90px;
     width: 35%;
     display: inline-block;
     transition: 1s;
-    filter: brightness(0.2); }
+    filter: brightness(0.05); }
   .about__photo-js {
     position: relative;
-    top: -15px;
+    top: 4px;
     left: 90px;
     width: 35%;
     display: inline-block;
@@ -342,9 +324,10 @@ body {
 
 /* **********  TIMELINE VERTICAL RULER ***********/
 .cv {
-  background-image: radial-gradient(rgba(0, 0, 0, 0.822) 15%, black 65%, black 85%, black 50%, black 100%), url(../img/mountain-min.jpg);
-  background-size: cover;
-  background-repeat: none; }
+  background-image: radial-gradient(rgba(0, 0, 0, 0.822) 40%, black 55%, black 85%, black 50%, black 100%), url(../img/leon2-min.jpeg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center; }
 
 .timeline {
   position: relative;
@@ -533,7 +516,7 @@ body {
       border: none; }
 
 .col-8 {
-  width: 66%;
+  width: 64.5%;
   padding-right: 40px; }
 
 .col-4 {
@@ -650,7 +633,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 75%;
+    width: 80%;
+    height: 90vh;
     max-width: 75rem;
     background-color: #f6f5ee;
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
@@ -663,20 +647,18 @@ body {
     transform: translate(-50%, -50%) scale(0.2);
     transition: all .5s .2s; }
   .popup__description {
-    padding: 10px;
+    padding: 50px;
     font-weight: 400;
     font-size: 1.1em;
-    letter-spacing: .4px;
     text-align: left;
     color: #5b5b5b;
-    width: 72%;
     margin: auto; }
     .popup__description span {
       color: #a6a6a6; }
   .popup__right {
     margin: auto; }
   .popup__img {
-    display: block; }
+    width: 60%; }
   .popup:target {
     opacity: 1;
     visibility: visible; }
@@ -686,7 +668,7 @@ body {
   .popup__close:link, .popup__close:visited {
     color: #5b5b5b;
     position: absolute;
-    top: 2.5rem;
+    top: 1rem;
     right: 2.5rem;
     font-size: 3rem;
     text-decoration: none;
@@ -695,6 +677,20 @@ body {
     line-height: 1; }
   .popup__close:hover {
     color: #ffd880; }
+
+.breaker {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/africa.jpeg);
+  height: 80vh;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: bottom center; }
+
+.breaker2 {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/chita-section.jpg);
+  height: 80vh;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: bottom center; }
 
 .section__contact {
   padding: 100px 0 0 0;
@@ -946,17 +942,7 @@ body {
     opacity: 1; }
 
 /* Responsive layout - makes a two.gallery__content-layout instead of four.gallery__contents */
-@media screen and (max-width: 800px) {
-  .gallery__content {
-    flex: 50%;
-    max-width: 50%; } }
-
 /* Responsive layout - makes the two.gallery__contents stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .gallery__content {
-    flex: 100%;
-    max-width: 100%; } }
-
 .long-horizontal {
   height: 100%;
   display: flex;
@@ -1059,9 +1045,13 @@ body {
   .statement__box {
     margin-top: -87px; }
   .statement__img {
-    width: 44%; } }
+    width: 44%; }
+  .toggle-btn {
+    left: 87%; } }
 
 @media screen and (max-width: 56.25em) {
+  .toggle-btn {
+    left: 84%; }
   .section__art {
     background: #000000; }
   .main {
@@ -1181,18 +1171,13 @@ body {
     margin-top: 60px; }
   .heading__secondary {
     padding: 0px 0 30px 63px; }
-  .nav,
-  .social__icons,
-  .logo {
-    display: none; }
-  .main__nav .logo__mobile {
-    display: block; }
-  .menu__btn {
-    display: block; }
-  .show {
-    visibility: visible; } }
+  .gallery__content {
+    flex: 50%;
+    max-width: 50%; } }
 
 @media screen and (max-width: 37.5em) {
+  .toggle-btn {
+    left: 78%; }
   .heading__secondary {
     left: -9px;
     padding: 0px 0 30px 63px; }
@@ -1212,6 +1197,9 @@ body {
     visibility: hidden; }
   .glide__slide--link {
     display: none; }
+  .gallery__content {
+    flex: 100%;
+    max-width: 100%; }
   .gallery__row {
     padding: 8px 30px; }
   .about {
@@ -1221,8 +1209,8 @@ body {
     .about__name {
       text-align: left;
       margin-top: 50px; }
-    .aboutabout__photo {
-      width: 75%; }
+    .about__photo {
+      width: 82%; }
   .cv {
     background: none; }
   .timeline::after {
@@ -1233,9 +1221,9 @@ body {
     padding-right: 25px; }
   .container::before {
     left: 60px;
-    border: medium solid white;
+    border: medium solid #fff;
     border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent; }
+    border-color: transparent #fff transparent transparent; }
   .left::after,
   .right::after {
     left: 21px; }
@@ -1275,6 +1263,8 @@ body {
     margin: auto; } }
 
 @media screen and (max-width: 31.25em) {
+  .toggle-btn {
+    left: 72%; }
   .contact__container .contact__form {
     padding: 20px; }
   .heading__secondary {
