--- a/coltermay.com/sass/_about.scss
+++ b/coltermay.com/sass/_about.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 100px;
+    padding: 100px 0 100px 0;
     // margin-left: 50px;
     // flex-direction: column-reverse; //mobile version
     // flex-direction: row-reverse;
@@ -40,7 +40,7 @@
     /* ABOUT IMG REVEALING ON SCROLL */
     &__photo {
         @include imgSetings;
-        filter: brightness(.2);
+        filter: brightness(.05);
     }
 
     &__photo-js {
@@ -79,14 +79,15 @@
 
 /* **********  TIMELINE VERTICAL RULER ***********/
 .cv {
-    background-image: radial-gradient(rgba(0, 0, 0, 0.822) 15%, 
-                    rgb(0, 0, 0) 65%, 
+    background-image: radial-gradient(rgba(0, 0, 0, 0.822) 40%, 
+                    rgb(0, 0, 0) 55%, 
                     rgb(0, 0, 0) 85%, 
                     rgb(0, 0, 0) 50%, 
                     rgb(0, 0, 0) 100%), 
-                    url(../img/mountain-min.jpg);
-    background-size: cover;
-    background-repeat: none;
+                    url(../img/leon2-min.jpeg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .timeline {
