--- a/coltermay.com/sass/_navigation.scss
+++ b/coltermay.com/sass/_navigation.scss
@@ -1,105 +1,127 @@
-.main__nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 27px;
+.navigation {
+    position: fixed;
     display: flex;
-    @include navBg;
-    overflow: hidden;
-    justify-content: space-between;
     align-items: center;
-
-    & .logo {
-        position: relative;
-        font-size: 1.4em;
-        text-decoration: none;
-        text-transform: uppercase;
-        letter-spacing: 1.3px;
-        font-weight: 700;
-        margin-left: 40px;
-        color: $color-primary;
-
-    }
-
-    & .logo__mobile {
-        display: none;
-
-        position: relative;
-        font-size: 1.7em;
-        text-decoration: none;
-        text-transform: uppercase;
-        letter-spacing: 1.3px;
-        font-weight: 700;
-        margin-left: 40px;
-        color: $color-primary;
-    }
-}
-
-.nav {
-    position: relative;
-    display: flex;
-    font-size: 14px;
-
-    &__item {
-        list-style: none;
-    }
-
-    &__link {
-        position: relative;
-        display: inline-block;
-        margin-right: 40px;
-        text-decoration: none;
-        font-size: 1em;
-        color: $color-primary;
-        font-weight: 400;
-        text-transform: uppercase;
-        transition: all .4s;
-
-        &:before {
-            content: '';
-		    width: 0;
-		    height: 2px;
-            margin-top: 30px;
-		    background-color: $color-primary;
-		    position: absolute;
-		    top: 100%;
-		    left: 0;
-        }
-
-        &:hover {
-            color: $color-grey-light;
-        }
-
-    }
-}
-
-.nav__item:hover .nav__link:before {
+    padding: 30px 0 30px 0;
     width: 100%;
-    transition: .5s;
+    z-index: 99;
+}
+
+//Logo
+.logo {
+    position: relative;
+    left: 3rem;
+    font-size: 1.9em;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    font-weight: 700;
+    color: $color-primary;
 }
 
 .active {
     color: $color-white;
 }
 
-.social__icons a {
-    color: $color-primary;
-    font-size: 1.2em;
+// nav button
+.toggle-btn {
+    cursor: pointer;
+    position: relative;
+    left: 90%;
+    width: 40px;
+    height: 12px;
+    z-index: 99;
+}
 
-    &:last-child {
-        margin-right: 40px;
-        margin-left: 8px;
+span.one {
+    position: absolute;
+    width: 40px;
+    height: 2px;
+    background: $color-white;
+}
+
+span.two {
+    position: absolute;
+    width: 40px;
+    height: 2px;
+    background: $color-white;
+    margin-top: 12px;
+}
+
+//Nav menu
+.menu {
+    position: fixed;
+    background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8));
+    height: 100vh;
+    width: 100%;
+    top: -100%;
+    z-index: 1;
+
+    & span {
+        color: $color-white;
     }
 
-    &:hover{
-        color:$color-white;
-    }
-} 
+}
 
+.data {
+    padding: 8em 0 0 2em;
+    text-align: center;
+}
+
+.nav__list {
+    list-style: none;
+}
+
+.nav__item {
+    font-size: 3em;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+}
+
+.nav__link {
+    text-decoration: none;
+    color: darken($color-grey-dark, 10%);
+
+    &:hover {
+        color: lighten($color-grey-dark, 10%);
+    }
+
+    &::before {
+        content: '[';
+        left: -5px;
+    }
+
+    &::after {
+        content: ']';
+        right: -5px;
+    }
+
+    &:before,
+    &:after {
+        position: relative;
+        opacity: 0;
+        color: $color-primary;
+        top: -1px;
+        transition: all .5s;
+    }
+
+    &:hover:before,
+    &:hover:after {
+        opacity: 0.7;
+    }
+
+    &:hover:before {
+        left: -20px;
+    }
+
+    &:hover:after {
+        right: -20px;
+    }
+
+}
 .sticky{
     position: fixed;
-    background: $color-black-bg2;
+    background: darken($color-black-bg2, 20%);
     animation-name: stick;
     animation-duration: .4s;
     animation-timing-function: ease;
@@ -107,51 +129,3 @@
     transition-delay: 125ms;
     z-index: 99;
 }
-
-//MOBILE NAVIGATION
-//Menu Botton
-.menu__btn {
-    position: absolute;
-    height: 4.2rem;
-    width: 4.2rem;
-    border-radius: 50%;
-    right: 15px;
-    top: 10px;
-    cursor: pointer;
-    display: none;
-    z-index: 2;
-
-    .btn__line {
-        position: relative;
-        top: 37%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 2rem;
-        height: 1px;
-        margin: 0 0 6px 0;
-        background: $color-white;
-        transition: ease-out .3s;
-        // @include easeOut3s;
-    }
-
-    // Rotate Into X With Menu Lines
-    &.close {
-        transform: rotate(180deg);
-        .btn__line {
-            //line 1 - Rotate
-            &:nth-child(1) {
-                transform: rotate(45deg) translate(-5px, 14px);
-            }
-            //Line 2 - Hide 
-            &:nth-child(2) {
-                opacity: 0;
-            }
-            //Line 3 Rotate
-            &:nth-child(3) {
-                transform: rotate(-45deg) translate(-4px, -15px);
-            }
-        }
-    }
-}
-
-
