--- a/coltermay.com/sass/_responsive.scss
+++ b/coltermay.com/sass/_responsive.scss
@@ -1,10 +1,3 @@
-/// RESPONSIVE BREAKE POINTS 
-$bp-largest: 75em; //1200px/16
-$bp-large: 68.75em; //1100px/16
-$bp-medium: 56.25em; //900px/16
-$bp-medium2: 50em; //800px/16
-$bp-small: 37.5em; //600px/16
-$bp-smallest: 31.25em; //500px/16
 
 @media screen and (max-width: $bp-largest) {
 
@@ -91,14 +84,20 @@ $bp-smallest: 31.25em; //500px/16
         width: 44%;
     }
 
-    // .statement__content {
-    //     margin-top: 130px;
-    // }
-
+    //NAV
+    .toggle-btn {
+        left: 87%;
+    }
 
 }
 
 @media screen and (max-width: $bp-medium) {
+    //NAV
+    .toggle-btn {
+        left: 84%;
+    }
+
+    //ART SECTION
     .section__art {
         background: $color-black;
     }
@@ -318,109 +317,44 @@ $bp-smallest: 31.25em; //500px/16
 
     }
 
+    //GALLERY 
+    .gallery__content {
+        flex: 50%;
+        max-width: 50%;
+      }
 
 
-
-    //MOBILE NAV
-
-    .nav,
-    .social__icons,
-    .logo {
-        display: none;
-    }
-
-    .main__nav .logo__mobile {
-        display: block;
-    }
-
-    .menu__btn {
-        display: block;
-    }
-
-
-    // .mobile {
-    //     position: fixed;
-    //     top: 0;
-    //     width: 100%;
-    //     opacity: 0.98;
-    //     // visibility: hidden;
-
-        &.show {
-            visibility: visible;
-        }
-
-    // }
+   
 
     // .nav,
-    // .branding {
-    //     display: flex;
-    //     flex-flow: column wrap;
-    //     align-items: center;
-    //     justify-content: center;
-    //     float: left;
-    //     width: 50%;
-    //     height: 100vh;
-    //     overflow: hidden;
-    //     // z-index: 10;
+    // .social__icons,
+    // .logo {
+    //     // display: none;
     // }
 
-    // .nav {
-    //     margin: 0;
-    //     padding: 0;
-    //     background: $color-black-bg2;
-    //     list-style: none;
-    //     transform: translate3d(100%, 0, 0);
-    //     // @include easeOut;
-
-    //     &.show {
-    //         //Slide in from top
-    //         transform: translate3d(0, 0, 0);
-    //     }
+    // .main__nav .logo__mobile {
+    //     display: block;
+    //     margin-left: 16px;
     // }
 
-    // .nav__item {
-    //     transform: translate3d(600px, 0, 0);
-    //     // @include easeOut;
-
-    //     &.show {
-    //         //Slide in from right
-    //         transform: translate3d(0, 0, 0);
-    //     }
-
-    //     // &.active-link>a {
-    //     //     color: $color-secondary;
-    //     // }
-    // }
-
-    // .nav__link {
-    //     display: inline-block;
-    //     position: relative;
-    //     font-size: 2rem;
-    //     color: $color-primary;
-    //     text-transform: uppercase;
-    //     padding: 1rem 0;
-    //     font-weight: 300;
-    //     // @include easeOut;
-
-    //     &:hover {
-    //         color: red;
-
-    //     }
-
+    // .menu__btn {
+    //     display: block;
     // }
 
 }
 
 @media screen and (max-width: $bp-small) {
+    // NAV
+     .toggle-btn {
+        left: 78%;
+    }
     .heading__secondary {
         left: -9px;
         padding: 0px 0 30px 63px;
-
     }
 
     .glide img {
         height: 200px;
-
     }
 
     .modal-content img {
@@ -451,6 +385,11 @@ $bp-smallest: 31.25em; //500px/16
     }
 
     //GALLERY 
+    .gallery__content {
+        flex: 100%;
+        max-width: 100%;
+      }
+
     .gallery__row {
         padding: 8px 30px;
 
@@ -469,8 +408,8 @@ $bp-smallest: 31.25em; //500px/16
             margin-top: 50px;
         }
 
-        &about__photo {
-            width: 75%;
+        &__photo {
+            width: 82%;
         }
     }
 
@@ -491,9 +430,9 @@ $bp-smallest: 31.25em; //500px/16
 
     .container::before {
         left: 60px;
-        border: medium solid white;
+        border: medium solid $color-white;
         border-width: 10px 10px 10px 0;
-        border-color: transparent white transparent transparent;
+        border-color: transparent $color-white transparent transparent;
     }
 
     .left::after,
@@ -525,9 +464,7 @@ $bp-smallest: 31.25em; //500px/16
     //ARTIST STATEMENT 
     .statement__img {
         top: 30px;
-
     }
-
 
     // CONTACT FORM
     .section__contact {
@@ -575,6 +512,10 @@ $bp-smallest: 31.25em; //500px/16
 
 
 @media screen and (max-width: $bp-smallest) {
+     // NAV
+     .toggle-btn {
+        left: 72%;
+    }
 
     .contact__container .contact__form {
         padding: 20px;
