--- a/coltermay.com/sass/_responsive.scss
+++ b/coltermay.com/sass/_responsive.scss
@@ -380,9 +380,9 @@
     }
 
 
-    .glide__slide--link {
-        display: none;
-    }
+    // .glide__slide--link {
+    //     display: none;
+    // }
 
     //GALLERY 
     .gallery__content {
