--- a/coltermay.com/css/style.css
+++ b/coltermay.com/css/style.css
@@ -82,7 +82,7 @@
   .slide:nth-child(2) {
     background: url(../img/jaguar-min.jpeg) no-repeat center center/cover; }
   .slide:nth-child(3) {
-    background: url(../img/elephant-min.jpeg) no-repeat center center/cover; }
+    background: url(../img/lion2-slider.jpg) no-repeat center center/cover; }
   .slide:nth-child(4) {
     background: url(../img/leon-min.jpg) no-repeat center center/cover; }
   .slide:nth-child(5) {
@@ -171,7 +171,7 @@ body {
 .logo {
   position: relative;
   left: 3rem;
-  font-size: 1.9em;
+  font-size: 1.7em;
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 1.3px;
@@ -415,7 +415,7 @@ span.two {
 
 .statement__img {
   position: relative;
-  top: 90px;
+  top: 100px;
   left: 6%;
   width: 37%;
   display: inline-block;
@@ -425,7 +425,7 @@ span.two {
 
 .js-statement__img {
   position: relative;
-  top: 90px;
+  top: 100px;
   left: 6%;
   width: 37%;
   display: inline-block;
@@ -679,18 +679,30 @@ span.two {
     color: #ffd880; }
 
 .breaker {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/africa.jpeg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/wolf-section-mobile.jpeg);
   height: 80vh;
   background-size: cover;
   background-attachment: fixed;
-  background-position: bottom center; }
+  background-position: center; }
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
+    .breaker {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/wolf-section.jpeg); } }
 
 .breaker2 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/chita-section.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/chita-section.jpg);
   height: 80vh;
   background-size: cover;
   background-attachment: fixed;
-  background-position: bottom center; }
+  background-position: center;
+  height: 80vh; }
+
+.breaker3 {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/wolves-section3.jpeg);
+  height: 80vh;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  height: 80vh; }
 
 .section__contact {
   padding: 100px 0 0 0;
@@ -895,7 +907,7 @@ span.two {
   .modal__description {
     padding: 10px;
     font-weight: 400;
-    font-size: 1.3em;
+    font-size: 1.1em;
     letter-spacing: .4px;
     text-align: left;
     width: 35%; }
@@ -1195,6 +1207,9 @@ span.two {
     transform: translateY(-300px); }
   .cover__line {
     visibility: hidden; }
+  .glide__slide--link {
+    padding: 13px 7px;
+    width: 83px; }
   .gallery__content {
     flex: 100%;
     max-width: 100%; }
@@ -1209,8 +1224,6 @@ span.two {
       margin-top: 50px; }
     .about__photo {
       width: 82%; }
-  .cv {
-    background: none; }
   .timeline::after {
     left: 31px; }
   .container {
