--- a/coltermay.com/sass/_slider.scss
+++ b/coltermay.com/sass/_slider.scss
@@ -60,7 +60,7 @@
     }
 
     &:nth-child(3) {    //picture 3
-        background: url(../img/elephant-min.jpeg) no-repeat center center/cover;
+        background: url(../img/lion2-slider.jpg) no-repeat center center/cover;
 
     }
 
