--- a/coltermay.com/sass/_variables.scss
+++ b/coltermay.com/sass/_variables.scss
@@ -9,6 +9,7 @@ $color-green-light: #18da58;
 
 $color-black-bg: rgba(14, 4, 4, 0.699);
 $color-black-bg2: rgba(10, 2, 2, 0.924);
+$bg-overlay: rgba(0, 0, 0, .5);
 
 $color-black: #000000;
 
