--- a/coltermay.com/css/style.css
+++ b/coltermay.com/css/style.css
@@ -1189,6 +1189,8 @@ span.two {
     max-width: 50%; } }
 
 @media screen and (max-width: 37.5em) {
+  .slide:nth-child(3) {
+    background-position: center right 30%; }
   .toggle-btn {
     left: 78%; }
   .heading__secondary {
