--- a/coltermay.com/sass/_responsive.scss
+++ b/coltermay.com/sass/_responsive.scss
@@ -348,6 +348,9 @@
     .slide:nth-child(3) {
         background-position: center right 30%;
     }
+    .slide:nth-child(4) {
+        background-position: center right 20%;
+    }
 
     // NAV
      .toggle-btn {
