--- a/coltermay.com/sass/_slider.scss
+++ b/coltermay.com/sass/_slider.scss
@@ -66,6 +66,7 @@
 
     &:nth-child(4) {    //picture 4
         background: url(../img/leon-min.jpg) no-repeat center center/cover;
+        background-position: center right 20%;
 
     }
 
