--- a/coltermay.com/sass/_mixins.scss
+++ b/coltermay.com/sass/_mixins.scss
@@ -112,6 +112,7 @@
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
+    position: relative;
 }
 
 @mixin brakerMobile {
