--- a/coltermay.com/sass/_art.scss
+++ b/coltermay.com/sass/_art.scss
@@ -285,6 +285,7 @@
   only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
   only screen and (min-width: 125em) {
     @include brakerMobile;
+    background-attachment: fixed;
   }
 
 }
