--- a/coltermay.com/sass/_mixins.scss
+++ b/coltermay.com/sass/_mixins.scss
@@ -110,7 +110,7 @@
 @mixin sectionBraker {
     height: 80vh;
     background-size: cover;
-    background-attachment: fixed;
+    // background-attachment: fixed;
     background-position: center;
     position: relative;
 }
