--- a/coltermay.com/sass/_responsive.scss
+++ b/coltermay.com/sass/_responsive.scss
@@ -362,7 +362,7 @@
     }
 
     .glide img {
-        height: 656px;
+        height: 600px;
     }
 
     .modal-content img {
@@ -514,6 +514,9 @@
     .popup__img {
         width: 90%;
         margin: auto;
+    }
+    .breaker {
+        background-attachment: fixed;
     }
 
 }
