--- a/coltermay.com/sass/_variables.scss
+++ b/coltermay.com/sass/_variables.scss
@@ -20,6 +20,7 @@ $color-black: #000000;
 $font-primary: 'Roboto', sans-serif;
 
 /// RESPONSIVE BREAKE POINTS 
+$bp-superLargest: 143.75em; //2300px/16
 $bp-largest: 75em; //1200px/16
 $bp-large: 68.75em; //1100px/16
 $bp-medium: 56.25em; //900px/16
