--- a/coltermay.com/sass/_slider.scss
+++ b/coltermay.com/sass/_slider.scss
@@ -66,12 +66,11 @@
 
     &:nth-child(4) {    //picture 4
         background: url(../img/leon-min.jpg) no-repeat center center/cover;
-        background-position: center right 20%;
 
     }
 
     &:nth-child(5) {    //picture 5
-        background: url(../img/mono-min.jpg) no-repeat center center/cover;
+        background: url(../img/cheetah-lsider.jpg) no-repeat center center/cover;
 
     }
 
